fix(tests): upgrade json-mapper to 0.10 and add missing commons-lang3
JsonObjectImpl.isNull() unimplemented (threw UnsupportedOperationException).
JRE REST tests failed to compile due to missing commons-lang3 dependency
required by generated FieldUtils usage.

Signed-off-by: Dmitrii Tikhomirov <chani.liet@gmail.com>